more templates, basic Tournament adding

--- a/football/templates/index.html
+++ b/football/templates/index.html
@@ -18,6 +18,6 @@
     {% endfor %}
 </table>
 
-{% bootstrap_pagination tournaments url="?page={{ tournaments.next_page_number }}" size="large" %}
+{% bootstrap_pagination tournaments url="?page={{ tournaments.next_page_number }}" size="small" %}
 
 {% endblock %}
