--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         {% block navbar %}
         <div class="navbar-header">
-            <a class="navbar-brand">Tournaments</a>
+            <a class="navbar-brand" href="{% url 'football:index' %}">Tournaments</a>
         </div>
         {% endblock %}
     </div><!-- /.container-fluid -->
