--- a/templates/full.html
+++ b/templates/full.html
@@ -22,7 +22,7 @@
         {% if user.is_authenticated %}
         <li class="active"><a href="{% url 'football:index' %}">Current</a></li>
         <li><a href="#">Joined</a></li>
-        <li><a href="#">Add new</a></li>
+        <li><a href="{% url 'football:create' %}">Add new</a></li>
         {% endif %}
     </ul>
     <ul class="nav navbar-nav navbar-right">
