--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -25,8 +25,8 @@
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 </form>
 <div class="btn-group btn-group-justified" role="group" aria-label="Problem" style="margin-top: 10px;">
-    <a href="/accounts/password/reset/" role="button" class="btn btn-default">Forgotten password?</a>
-    <a href="/accounts/register/" role="button" class="btn btn-default">Sign up</a>
+    <a href="{% url 'auth_password_reset' %}" role="button" class="btn btn-default">Forgotten password?</a>
+    <a href="{% url 'registration_register' %}" role="button" class="btn btn-default">Sign up</a>
 </div>
 
 {% endblock %}
