--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <title>{% block title %}{% endblock %}</title>
     {% bootstrap_css %}
     {% bootstrap_javascript jquery=1 %}
+    {% block head %}{% endblock %}
 </head>
 <body>
 <nav class="navbar navbar-default">
