--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,13 @@
 {% load bootstrap3 %}
 {% bootstrap_messages %}
-
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
+        <link href="{% static 'sticky-footer.css' %}" rel="stylesheet">
     {% bootstrap_css %}
     {% bootstrap_javascript jquery=1 %}
     {% block head %}{% endblock %}
@@ -24,6 +25,5 @@
 <div class="container">
     {% block content %}{% endblock %}
 </div>
-
 </body>
 </html>
