--- a/templates/full.html
+++ b/templates/full.html
@@ -20,21 +20,25 @@
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
         {% if user.is_authenticated %}
-        <li class="active"><a href="{% url 'football:index' %}">Current</a></li>
-        <li><a href="#">Joined</a></li>
-        <li><a href="{% url 'football:create' %}">Add new</a></li>
+        <li{% if request.resolver_match.url_name == 'index' %} class="active"{% endif %}>
+            <a href="{% url 'football:index' %}">All</a>
+        </li>
+        <li{% if request.resolver_match.url_name == 'current' %} class="active"{% endif %}>
+            <a href="{% url 'football:current' %}">Current</a>
+        </li>
         {% endif %}
     </ul>
     <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
+        <li><a href="{% url 'football:create' %}">New</a></li>
         <li><a href="{% url 'auth_logout' %}">Logout</a></li>
         {% else %}
         <li><a href="{% url 'auth_login' %}">Login</a></li>
         {% endif %}
     </ul>
-    <form class="navbar-form navbar-right" role="search">
+    <form class="navbar-form navbar-right" role="search" action="{% url 'football:search' %}" method="get" >
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" name="query" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
