--- a/football/templates/sponsor.html
+++ b/football/templates/sponsor.html
@@ -6,7 +6,7 @@
 {% load bootstrap3 %}
 {% load bootstrap %}
 
-<h2 class="form-signin-heading">Join tournament</h2>
+<h2 class="form-signin-heading">Add sponsor</h2>
 <form class="form-signin" method="post" action="">
     {% csrf_token %}
     {% load bootstrap %}
